Outline slide deck for SD & JM to finish.

--- a/prez/slides.tex
+++ b/prez/slides.tex
@@ -32,13 +32,14 @@ Fredericksburg, Virginia, USA\\
 
 \end{frame}
 
-\begin{frame}[c]{Defining polarization} % Justin
+\begin{frame}[c]{Defining polarization} % Stephen
 
 \large
 
 \centering
 ``America is becoming increasingly polarized..."
 
+% TODO: get JAn 6th photo
 \vspace{-.2in}
 \begin{figure}
 \includegraphics[width=0.35\textwidth]{usa.png}
@@ -63,35 +64,11 @@ What does this actually mean?
 
 \begin{frame}[c]{Proxy \#1: Assortativity coefficient} % Justin
 
-{\tiny \color{red} Justin TODO: This is an old slide from a previous talk, in which I talk
-about nominal (binary/categorical; i.e., red and blue) opinions instead of
-continuous opinions. You can reuse any of this, or just throw it away, and
-replace with content about aggregate assortativity over continuous opinions.}
+% TODO: add slides from extravaganza, and explain assortativity well
 
-A graph's \textit{(nominal) assortativity coefficient} is the fraction of
-edges that are between same-valued nodes, compared to what we would expect if
-the edges were dispersed at random.
+% explain why we think this is a measure of polarization
 
-\begin{itemize}
-\itemsep.1em
-\item 1 --- ``perfect" assortative mixing (all edges are between nodes of the
-same value)
-\item 0 --- no assortative mixing (node values have no impact on whether nodes
-will connect)
-\item a negative number --- (nodes tend to connect to nodes of
-\textit{different} values)
-
-\end{itemize}
-
-\end{frame}
-
-\begin{frame}[c]{Assortativity coefficient} % Justin
-\centering
-\includegraphics[width=0.4\textwidth]{assortativityGraph.png}
-
-7 blue--blue edges and 1 red--red edge\\
-7 red--blue edges\\
-Assortativity coefficient: 0.111
+% "echo chambers"
 
 \end{frame}
 
@@ -113,6 +90,84 @@ Stephen TODO:
 
 \end{frame}
 
+\begin{frame}[c]{The model}  % Justin
+
+% Describe in selected detail the model
+
+% N heterogeneous agents who encounter each other on a social network.
+
+% ER edge prob is a parameter
+
+% Multiple continuous opinions 
+
+\end{frame}
+
+
+\begin{frame}[c]{Traditional BC}  % Justin
+
+% Here is traditional bounded confidence (BC) from Hegelsmen-Krause
+
+% Show one number line and two peeps
+
+\end{frame}
+
+
+\begin{frame}[c]{CI2 - attraction only}  % Justin
+
+We define \textbf{Cross-Issue Influence} (CI2) as the effect that a person's
+social contact can have on one of their opinions based on their agreement (or
+disagreement) on a different issue.
+
+% Show two number line and two peeps, with an attraction due to openness
+
+\end{frame}
+
+
+\begin{frame}[c]{CI2 - add repulsion}  % Justin
+
+% Show two number line and two peeps, with a repulsion due to disgust
+
+% Also show the Justin threshold diagram with red & green regions
+
+% And cite Griffin, Em (2011). A First Look at Communication Theory. New York,
+% New York: McGraw Hill. pp. 194–204.
+
+\end{frame}
+
+\begin{frame}[c]{Fig 1 explained}  % Justin
+
+Fewer (meaningful) social connections = higher polarization BUT only at the low
+end.
+
+\end{frame}
+
+\begin{frame}[c]{Fig 2 explained}  % Justin
+
+%TODO: Justin verify
+%(Just for completeness, rerun paper graph Figure 2 with a much lower value of
+%edge prob (how about .05 instead of .5, for instance.) Then we’ll verify the
+%null hypothesis that “openness does not impact assortativity.”)
+
+openness threshold surprisingly does not seem to impact assortativity.
+
+\end{frame}
+
+\begin{frame}[c]{Proxy \#2: Issue Alignment} % Stephen
+
+Reminder: define \textbf{Issue Alignment} (IA) as the tendency for people who agree on
+one issue to also agree on other (unrelated) issues.
+
+{\tiny \color{red} 
+Stephen TODO:
+
+\begin{itemize}
+\itemsep.1em
+\item Illustrative list of typical left vs. right positions
+\item Ask: in your experience, does this hold true?
+\end{itemize}
+}
+
+\end{frame}
 \begin{frame}[c]{One possible explanation for IA} % Stephen
 
 {\tiny \color{red} 
@@ -141,16 +196,16 @@ aligned."
 
 \begin{frame}[c]{A third possible explanation for IA} % Stephen
 
-We define \textbf{Cross-Issue Influence} (CI2) as the effect that a person's
-social contact can have on one of their opinions based on their agreement (or
-disagreement) on a different issue.
+CI2!
 
 {\tiny \color{red} 
 Stephen TODO:
 
 We wish there was more justification in the social psych lit for this, but we
 have to fall back on (1) homophily and (2) common sense.
+}
 
+{\small \color{red} 
 Big idea: even without any underlying ideological connection between issues,
 and even without media influence, IA will naturally develop solely due to CI2.
 In other words, CI2 is sufficient for IA. (Wide reaching implications on how we
@@ -160,7 +215,51 @@ might be necessary to reduce it.)
 
 \end{frame}
 
-\begin{frame}[c]{CI2 in detail}  % Justin
+\begin{frame}[c]{IA example} % Stephen
+
+\end{frame}
+
+
+\begin{frame}[c]{Define "buckets"} % Stephen
+
+\end{frame}
+
+
+\begin{frame}[c]{Define "clone pair" / anti-clone pair} % Stephen
+
+\end{frame}
+
+
+
+\begin{frame}[c]{Census plot w/o CI2} % Stephen
+
+\end{frame}
+
+\begin{frame}[c]{Census plot w/ CI2} % Stephen
+
+\end{frame}
+
+\begin{frame}[c]{Heat maps: showing interplay of openness and disgust threshold
+with and without CI2} % Stephen
+
+\end{frame}
+
+
+% Tuck-away slide
+%\begin{frame}[c]{Diametricity}
+%
+%One other way to define polarization is extremity of views.
+%
+%Fact: if CI2 is employed, the model always (?) produces exactly two buckets,
+%and all the opinions in those buckets are at the poles.
+%
+%Fact: if only I2 is employed, there will normally be many buckets (often one
+%for each combination of fully-polarized opinions; i.e., a (0,0,0) bucket, a
+%(0,0,1), (0,0,2), (0,1,0), ...)
+%
+%\end{frame}
+
+\begin{frame}[c]{Discussion and takeaways}  % Stephen & Justin
 
 \end{frame}
 
