Add slides for possible IA explanations.

--- a/prez/slides.tex
+++ b/prez/slides.tex
@@ -1,5 +1,6 @@
 \documentclass[12pt]{beamer}
 \usepackage{mathtools}
+\usepackage{makecell}
 \useoutertheme{infolines}
 \usetheme{default}
 \usefonttheme{serif}
@@ -61,7 +62,7 @@ What does this actually mean?
 
 \end{frame}
 
-\begin{frame}[c]{Proxy \#1: Assortativity coefficient} % Justin
+\begin{frame}[c]{Polarization Proxy \#1: Assortativity coefficient} % Justin
 
 % TODO: add slides from extravaganza, and explain assortativity well
 
@@ -80,20 +81,37 @@ What does this actually mean?
 \end{frame}
 
 
-\begin{frame}[c]{Proxy \#2: Issue Alignment} % Stephen
+\begin{frame}[c]{Polarization Proxy \#2: Issue Alignment} % Stephen
 
 We define \textbf{Issue Alignment} (IA) as the tendency for people who agree on
 one issue to also agree on other (unrelated) issues.
 
-{\tiny \color{red} 
-Stephen TODO:
+\begin{center}
+\begin{tabular}{c|c}
+\pause
+raise the minimum wage & lower the minimum wage \\
+\pause
+pro-choice & pro-life \\
+\pause
+higher taxes \& services & lower taxes \& services \\
+\pause
+anti-guns & pro-guns \\
+\pause
+pro-immigration & anti-immigration \\
+\pause
+pro-vaccine-mandate & anti-vaccine-mandate \\
+\pause
+pro-renewable-energy & pro-fossil-fuels \\
+\pause
+... & ... \\
+\end{tabular}
+\end{center}
 
-\begin{itemize}
-\itemsep.1em
-\item Illustrative list of typical left vs. right positions
-\item Ask: in your experience, does this hold true?
-\end{itemize}
-}
+\pause
+\footnotesize
+
+If people generally adhere to an entire suite of opinions, we term that society
+``Issue Aligned'' and claim this is an indication of polarization.
 
 \end{frame}
 
@@ -130,7 +148,8 @@ Model Characteristics:
 
 \begin{frame}[c]{Traditional BC with Positive Influence}  % Justin
 
-% Here is traditional bounded confidence (BC) from Hegelsmen-Krause
+% Here is traditional bounded confidence (BC) from Hegelsmen-Krause and
+% Deffuant et al
 
 % Show one number line and two peeps
 \begin{figure}
@@ -145,7 +164,7 @@ Model Characteristics:
 
 \begin{frame}[c]{Traditional BC with Negative Influence}  % Justin
 
-% Here is traditional bounded confidence (BC) from Hegelsmen-Krause with repulsion
+% Here is traditional bounded confidence (BC) from Hegelsmen-Krause/Deffuant with repulsion
 
 \begin{figure}
 	\includegraphics[width=0.65\textwidth]{images/BCNegativeInfluence.png}
@@ -203,45 +222,76 @@ openness threshold surprisingly does not seem to impact assortativity.
 
 \end{frame}
 
-\begin{frame}[c]{Proxy \#2: Issue Alignment} % Stephen
+\begin{frame}[c]{Issue Alignment (IA)} % Stephen
 
-Reminder: define \textbf{Issue Alignment} (IA) as the tendency for people who agree on
-one issue to also agree on other (unrelated) issues.
+%\textbf{Issue Alignment} (IA): the tendency for people who agree on one issue
+%to also agree on other (unrelated) issues.
 
-{\tiny \color{red} 
-Stephen TODO:
+\textit{Why} does IA occur?
 
-\begin{itemize}
-\itemsep.1em
-\item Illustrative list of typical left vs. right positions
-\item Ask: in your experience, does this hold true?
-\end{itemize}
+Possible explanation \#1: perhaps there is some deep underlying
+principle to people's ideologies that connects seemingly unconnected issues.
+\pause
+
+\begin{center}
+\begin{tabular}{clp{1cm}rc}
+\makecell{
+\\
+\includegraphics[width=0.15\textwidth]{thinker1.jpg}
+} &
+\makecell{
+Ideology 1 $\Rightarrow$ \\
+Opinion A \\
+Opinion B \\
+Opinion C \\} & &
+\makecell{
+Ideology 2 $\Rightarrow$ \\
+Opinion D \\
+Opinion E \\
+Opinion F \\} &
+\makecell{
+\\
+\includegraphics[width=0.1\textwidth]{thinker2.jpg}
 }
+\end{tabular}
+\end{center}
 
 \end{frame}
-\begin{frame}[c]{One possible explanation for IA} % Stephen
 
-{\tiny \color{red} 
-Stephen TODO:
+\begin{frame}[c]{Issue Alignment (IA)} % Stephen
 
-Perhaps there is some deep underlying principle to people's ideologies that
-connects seemingly unconnected issues. (Maybe for some deep reason it actually
-makes sense that people who are pro-life are also pro-gun, and anti-tax, and
-anti-vacc.)
+\textit{Why} does IA occur?
+
+Possible explanation \#2: perhaps a small number of popular media
+outlets each articulates a set of opinions on various issues. 
+
+\pause
+\begin{center}
+\begin{tabular}{clp{1cm}rc}
+\makecell{
+\\
+\includegraphics[width=0.15\textwidth]{listener1.jpg}
+} &
+\makecell{
+News source 1:  \\
+``Opinion A!'' \\
+``Opinion B!'' \\
+``Opinion C!'' \\} & &
+\makecell{
+News source 2:  \\
+``Opinion D!'' \\
+``Opinion E!'' \\
+``Opinion F!'' \\} & 
+\makecell{
+\\
+\includegraphics[width=0.15\textwidth]{listener2.jpg}
 }
+\end{tabular}
+\end{center}
 
-\end{frame}
-
-\begin{frame}[c]{Another possible explanation for IA} % Stephen
-
-{\tiny \color{red} 
-Stephen TODO:
-
-Perhaps a small number of popular media outlets each articulates a number of
-opinions on various issues. The people who listen to them are naturally
-influenced to each of these different opinion values, and thus become ``issue
-aligned."
-}
+%The people who
+%listen to them are naturally influenced to each of these different opinion
+%values, and thus become ``issue aligned."
 
 \end{frame}
 
