Tweak wording of agent issues.

--- a/prez/slides.tex
+++ b/prez/slides.tex
@@ -138,7 +138,7 @@ Model Characteristics:
 \itemsep.1em
 \item \textit{N} heterogenous agents who encounter each other on a social network.
 \item \textit{Edge Probability} of a random Erd\"{o}s-R\'{e}nyi graph which controls network density
-\item Agents have multiple opinions that exist on a continuum
+\item Agents have opinions on multiple issues, each of which is on a continuum
 \item \textit{Openness Threshold} and \textit{Disgust Threshold} that control the degree of agent opinion influence
 \end{itemize}
 
