added Figure 1 Stuff

--- a/prez/slides.tex
+++ b/prez/slides.tex
@@ -185,10 +185,20 @@ disagreement) on a different issue.
 
 \end{frame}
 
-\begin{frame}[c]{Fig 1 explained}  % Justin
+\begin{frame}[c]{Assortativity and Network Density}  % Justin
 
-Fewer (meaningful) social connections = higher polarization BUT only at the low
-end.
+\begin{figure}
+	\includegraphics[width=0.75\textwidth]{images/Assort_edge.png}
+	%TODO: add captions
+	%TODO: This is the graph on the paper, do we want meaningful social connections instead? N*edgeprob
+
+\end{figure}
+
+\small
+\begin{itemize}
+\itemsep.1em
+\item Fewer (meaningful) social connections = higher polarization BUT only at the low end.
+\end{itemize}
 
 \end{frame}
 
