--- a/prez/slides.tex
+++ b/prez/slides.tex
@@ -127,10 +127,10 @@ If people generally adhere to an entire suite of opinions, we term that society
 \large
 
 \centering
-Opinion Dynamics ABM
+	\underline{Opinion Dynamics ABM}
 
 \vspace{.05in}
-Model Characteristics:
+	Model Characteristics:
 \vspace{-.15in}
 
 \small
