fixed CI2 plots and added captions to assortativity plots

--- a/prez/slides.tex
+++ b/prez/slides.tex
@@ -64,21 +64,26 @@ What does this actually mean?
 
 \begin{frame}[c]{Polarization Proxy \#1: Assortativity coefficient} % Justin
 
-% TODO: add slides from extravaganza, and explain assortativity well
-
 % explain why we think this is a measure of polarization
 
 % "echo chambers"
-
-
+\small 	\textbf{Assortativity} measures the tendency of agents to associate with other like-minded agents. 
+	\vspace{0.2in}
+\begin{columns}[onlytextwidth]
+\begin{column}{.50\textwidth}
 \begin{figure}
-
-	\includegraphics[width=0.40\textwidth]{images/HighAssortDiagram.png}
-	\hfill
-	\includegraphics[width=0.40\textwidth]{images/LowAssortDiagram.png}
-	%TODO: add captions for high and low assort
-    % possibly add initial sentence describing assorativity concisely
+	\includegraphics[width=0.90\textwidth]{images/HighAssortDiagram.png}
+	\small \caption{High Assortativity}
 \end{figure}
+\end{column}
+\hfill
+\begin{column}{.50\textwidth}
+\begin{figure}
+	\includegraphics[width=0.90\textwidth]{images/LowAssortDiagram.png}
+	\small \caption{Low Assortativity}
+\end{figure}
+\end{column}
+\end{columns}
 
 \end{frame}
 
@@ -96,7 +101,7 @@ What does this actually mean?
 \large
 
 \centering
-	\underline{Opinion Dynamics ABM}
+	\underline{Opinion Dynamics ABM with Mesa}
 
 \vspace{.05in}
 	Model Characteristics:
@@ -137,7 +142,6 @@ What does this actually mean?
 
 \begin{figure}
 	\includegraphics[width=0.65\textwidth]{images/BCNegativeInfluence.png}
-	%TODO: add captions
 \end{figure}
 
 
@@ -148,8 +152,6 @@ What does this actually mean?
 
 \begin{figure}
 	\includegraphics[width=0.9\textwidth]{images/Assort_edge.png}
-	%TODO: add captions
-	%TODO: This is the graph on the paper, do we want meaningful social connections instead? N*edgeprob
 
 \end{figure}
 
@@ -301,7 +303,7 @@ social contact can have on one of their opinions based on their agreement (or
 disagreement) on a different issue.
 
 \begin{figure}
-	\includegraphics[width=0.75\textwidth]{images/CI2Attraction.png}
+	\includegraphics[width=0.75\textwidth]{images/CI2Positive.png}
 	%TODO: add captions
 \end{figure}
 
@@ -317,7 +319,7 @@ disagreement) on a different issue.
 % And cite Griffin, Em (2011). A First Look at Communication Theory. New York,
 % New York: McGraw Hill. pp. 194–204.
 \begin{figure}
-	\includegraphics[width=0.75\textwidth]{images/CI2Repulsion.png}
+	\includegraphics[width=0.75\textwidth]{images/CI2Negative.png}
 	%TODO: add captions
 \end{figure}
 
