(Tweak plot placement.)

--- a/prez/slides.tex
+++ b/prez/slides.tex
@@ -435,26 +435,29 @@ If a pair of agents \underline{dis}agrees on every issue, we call them
 \end{frame}
 
 
-\begin{frame}[c]{Census plot w/o CI2} % Stephen
+\begin{frame}[c]{Census plot with I2 only} % Stephen
 
+\vspace{-.3in}
 \begin{center}
-\includegraphics[width=0.9\textwidth]{census3issuesI2.png}
+\hspace{-.6in} \includegraphics[width=1.11\textwidth]{census3issuesI2.png}
 \end{center}
 
 \end{frame}
 
-\begin{frame}[c]{Census plot w/ CI2} % Stephen
+\begin{frame}[c]{Census plot with \textbf{CI2}} % Stephen
 
+\vspace{-.3in}
 \begin{center}
-\includegraphics[width=0.9\textwidth]{census3issuesCI2.png}
+\hspace{-.6in} \includegraphics[width=1.11\textwidth]{census3issuesCI2.png}
 \end{center}
 
 \end{frame}
 
-\begin{frame}[c]{Census plot w/ CI2} % Stephen
+\begin{frame}[c]{Census plot with \textbf{CI2}} % Stephen
 
+\vspace{-.3in}
 \begin{center}
-\includegraphics[width=0.9\textwidth]{census10issuesCI2.png}
+\hspace{-.6in} \includegraphics[width=1.11\textwidth]{census10issuesCI2.png}
 \end{center}
 
 \end{frame}
